fix: prevent horizontal scrollbars by limiting .welcomeHeader to max-width 100%

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -13,6 +13,7 @@
   align-items: center;
   justify-content: space-between;
   height: 109px;
+  max-width: 100%;
 }
 
 .header__layout {
